# KAIST_Mobility_Challenge_Hardware

./: .gitignore
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/KMC_HARDWARE_uart_sdk/share/KMC_HARDWARE_uart_sdk/: package.bash  package.zsh
install/cav_controller/lib/cav_controller/: Problem_1  run_drive
install/cav_controller/share/cav_controller/: package.bash  package.sh  package.xml
install/domain_bridge/include/domain_bridge/: compress_messages.hpp  domain_bridge.hpp  domain_bridge_config.hpp  domain_bridge_options.hpp  parse_domain_bridge_yaml_config.hpp  process_cmd_line_arguments.hpp  qos_options.hpp  service_bridge_impl.inc  service_bridge_options.hpp  topic_bridge.hpp  topic_bridge_options.hpp  utils.hpp  visibility_control.hpp
install/domain_bridge/include/domain_bridge/msg/: compressed_msg.h  compressed_msg.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/domain_bridge/lib/domain_bridge/: domain_bridge
install/domain_bridge/share/domain_bridge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/domain_bridge/share/domain_bridge/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  domain_bridgeConfig-version.cmake  domain_bridgeConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/domain_bridge/share/domain_bridge/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/p3_cpp/lib/p3_cpp/: control_p3  main_p3
install/p3_cpp/share/p3_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/simulator_launch/share/simulator_launch/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/src/cav_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/cav_controller/cav_controller/: control_p3.cpp  main_p3.cpp  p1.py
ros2_ws/src/domain_bridge/: CMakeLists.txt
ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/log/: latest_build
ros2_ws/src/p3_cpp/: CMakeLists.txt
ros2_ws/src/p3_cpp/config/: bridge01.yaml  bridge02.yaml  bridge03.yaml  bridge04.yaml  bridge06.yaml  bridge_04.yaml  bridge_06.yaml  bridge_07.yaml  bridge_1.yaml  bridge_2.yaml  bridge_3.yaml  bridge_4.yaml  domain_1.yaml  domain_2.yaml  domain_3.yaml  domain_4.yaml  domain_manage.yaml
ros2_ws/src/p3_cpp/launch/: cav_launch.py  control.launch.py  driver.launch.py  main.launch.py  server_launch.py  vehicle.launch.py
ros2_ws/src/p3_cpp/src/: control_p3.cpp  main_p3.cpp
ros2_ws/src/p3_cpp/tool/: Readme.md  cav01p3.csv  cav04p3_inside.csv  cav06p3.csv  cav06p3_inside.csv  cav2p3_inside.csv  cav4p3.csv  p1_2.csv
ros2_ws/src/p3_cpp/tool/waypoint/: 10_13.csv  12_15.csv  15_18.csv  15_60.csv  16_19.csv  16_61.csv  22_25.csv  24_27.csv  25_36.csv  27_31.csv  28_31.csv  33_31.csv  35_28.csv  37_38.csv  38_41.csv  38_48.csv  3_7.csv  41_43.csv  45_62.csv  46_41.csv  48_58.csv  49_55.csv  49_59.csv  53_25.csv  55_12.csv  56_59.csv  57_47.csv  58_19.csv  59_18.csv  5_45.csv  5_8.csv  60_52.csv  62_38.csv  63_39.csv  6_44.csv  7_9.csv  9_12.csv
ros2_ws/src/simulator_launch/: CMakeLists.txt
ros2_ws/src/simulator_launch/launch/: simulator_launch.py
ros2_ws/tool/: cav1p1.csv  cav2p3.csv
ros2_ws/tool/waypoint/: 13_14.csv  20_23.csv  21_51.csv  24_37.csv  32_5.csv  39_40.csv  3_6.csv  48_53.csv  51_46.csv  51_55.csv  52_24.csv  62_35.csv
sdk/KAIST_Mobility_Challenge_SDK/: .gitignore  CMakeLists.txt  README.md
sdk/KAIST_Mobility_Challenge_SDK/examples/Driver_Basic/: driver_demo.cpp
sdk/KAIST_Mobility_Challenge_SDK/examples/Driver_Intermediate/: driver_observe.cpp  driver_read_allstate.cpp  high_rate_control.cpp
sdk/KAIST_Mobility_Challenge_SDK/examples/Driver_ROS2/: CMakeLists.txt  README.md  package.xml
sdk/KAIST_Mobility_Challenge_SDK/examples/Driver_ROS2/joystick/: kmc_web_joystick_node.py
sdk/KAIST_Mobility_Challenge_SDK/examples/Driver_ROS2/joystick/web/: index.html
sdk/KAIST_Mobility_Challenge_SDK/examples/Driver_ROS2/log/: latest_build
sdk/KAIST_Mobility_Challenge_SDK/examples/Driver_ROS2/src/: driver_demo_node.cpp  driver_observe_node.cpp  driver_read_allstate_node.cpp  high_rate_control_node.cpp
sdk/KAIST_Mobility_Challenge_SDK/examples/UartClient_Advanced/: read_allstate.cpp  read_battery.cpp  read_speed.cpp  teleop_and_speed.cpp
sdk/KAIST_Mobility_Challenge_SDK/examples/log/: latest_build
sdk/KAIST_Mobility_Challenge_SDK/inc/: KMC_driver.hpp  KMC_protocol.hpp  KMC_serial_port.hpp  KMC_uart_client.hpp
sdk/KAIST_Mobility_Challenge_SDK/log/: latest_build
sdk/KAIST_Mobility_Challenge_SDK/src/: KMC_driver.cpp  KMC_serial_port.cpp  KMC_uart_client.cpp
sdk/KAIST_Mobility_Challenge_SDK/tutorials/: API_REFERENCE.md  README.md  README_QUICKSTART.md  README_SDK.md
sdk/KAIST_Mobility_Challenge_SDK/tutorials/Driver_Basic/: 01_driver_demo.md
sdk/KAIST_Mobility_Challenge_SDK/tutorials/Driver_Intermediate/: 01_driver_observe.md  02_read_allstate.md  03_high_rate_control.md
sdk/KAIST_Mobility_Challenge_SDK/tutorials/Driver_ROS2/: 01_driver_ros2.md  02_driver_observe_ros2.md  03_driver_read_allstate_ros2.md  04_high_rate_control_ros2.md
sdk/KAIST_Mobility_Challenge_SDK/tutorials/UartClient_Advanced/: 01_read_speed.md  02_read_battery.md  03_read_allstate.md  04_teleop_and_speed.md
tool/: csv_to_json.py
tool/waypoint/: 18_21.csv  26_29.csv  28_32.csv  36_38.csv  37_39.csv  61_47.csv
(+506 files in other folders)
