<?xml version="1.0"?>
<package format="3">
  <name>kmc_hardware_driver_node</name>
  <version>1.0.0</version>
  <description>ROS2 Driver node examples for KMC_HARDWARE UART</description>
  <maintainer email="sjg12044@kaist.ac.kr">Junggeun Seo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
